# ZManager

./: .gitignore  WORK.md
crates/zmanager-tauri/: Cargo.toml
crates/zmanager-tauri/capabilities/: default.json
crates/zmanager-tauri/gui/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
crates/zmanager-tauri/gui/src/: App.vue  index.css  main.ts
crates/zmanager-tauri/gui/src/app/stores/: file.ts  layout.ts
crates/zmanager-tauri/gui/src/components/split/: Breadcrumb.vue  FileList.vue  FilePanel.vue  PanelTabs.vue  PanelToolbar.vue  SplitContainer.vue  SplitViewManager.vue
crates/zmanager-tauri/gui/src/entities/: types.ts
crates/zmanager-tauri/gui/src/shared/: api.ts  ipc.ts
crates/zmanager-tauri/gui/src/stores/: clipboard.store.ts  favorites.store.ts  fileSystem.store.ts  index.ts  splitView.store.ts  ui.store.ts
crates/zmanager-tauri/gui/src/styles/: main.css
crates/zmanager-tauri/gui/src/types/: index.ts
crates/zmanager-tauri/gui/src/widgets/: Breadcrumb.vue  FileList.vue  FilePanel.vue  LayoutNode.vue  SplitView.vue  Tabs.vue
crates/zmanager-tauri/src/: file_ops.rs  lib.rs  main.rs  types.rs
